2006-11-23  Pascal Terjan  <pterjan@linuxfr.org>

	* backends/evoldap-backend.c: Fix small leak (#345297, coverity #2742)

2006-10-07  Matthias Clasen <mclasen@redhat.com>

	* gconf/gconf-client.c: Fix error handling in the
	getters.  (#102050, #360224)

============================= 2.16.0 ======================

2006-08-15  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Fix intltool req.

2006-08-08  Kjartan Maraas  <kmaraas@gnome.org>

	* doc/gconftool-2.1: Add missing newline (Loïc Minier,
	Jan Kratochvil) Closes bug #304143.

2006-08-07  Alexander Larsson  <alexl@redhat.com>

	* configure.in:
	Don't link to libpopt. (#336307)
	Patch from William Jon McCann.

2006-06-14  Michael Meeks  <michael.meeks@novell.com>

	* gconf/GConfX.idl: declare that we raise the
	exception we raise - fixes debug issue in sabayon &
	kills syslog spew:
	gconfd (sabayon-admin): Some clown returned
	undeclared exception 'IDL:ConfigException:1.0'
	cf. gconfd_get_database.

2006-05-12  Julio M. Merino Vidal  <jmmv@NetBSD.org>

	* configure.in:
	* gconf/Makefile.am:
	* gconf/default.path.in: Generate the default.path file during the
	build instead of doing it from configure.ac so that we get the correct
	expanded value for sysgconfdir.  According to Autoconf documentation
	this is the canonical way to access *dir variables.  Addresses
	problems introduced by #336019.

2006-05-07  Kjartan Maraas  <kmaraas@gnome.org>

	* Makefile.am: Add intltool files to EXTRA_DIST and
	DISTCLEANFILES.
	* autogen.sh: Run intltoolize.
	* configure.in: Fix the po/LINGUAS stuff.

2006-05-06  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/xml-dir.c: (dir_sync): Fix a potential use after free
	reported by the coverity checker - #1239. Closes bug #338196.

2006-05-05  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in:
	* gconf/Makefile.am:
	* gconf/gconf-sanity-check.c: (main):
	* gconf/gconftool.c: (main):
	Migrate to GOption. Patch by Vincent Vuntz. Closes
	bug #336307.
